--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <!--start of profile -->
             <div class="aravind" id="aravind">
                 <div class="flex-container">
-                    <img src="img/aravindatchan.lpg.jpg"alt="Aravindatchan" class="img"/>
+                    <img src="aravindatchan.lpg.jpg"alt="Aravindatchan" class="img"/>
                     <p>Aravindatchan Udayakumar</p>
                     <p><i>"practice with passion"</i></p>
                     <div>
