--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <!--start of profile -->
             <div class="aravind" id="aravind">
                 <div class="flex-container">
-                    <img src="aravindatchan.lpg.jpg"alt="Aravindatchan" class="img"/>
+                    <img src="img/aravindatchan.lpg.jpg"alt="Aravindatchan" class="img"/>
                     <p>Aravindatchan Udayakumar</p>
                     <p><i>"practice with passion"</i></p>
                     <div>
@@ -71,7 +71,6 @@
                     <li>
                         <div>2017</div>
                         <div>
-                           
                                 <p><i class='fas fa-school big'></i> Prince Matriculation Higher Secondary School</p>
                                 <p>12 th</p>
                                 <p>State Board</p>
