--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <!-- <a href=""> <i class='fab fa-linkedin big'></i></a> -->
                         <!-- <a href=""> <i class='fas fa-paper-plane big'></i></a> -->
                         <!-- <a href=""> <i class='fab fa-reddit-square big'></i></a> -->
-                        <a href="file:///D:/xampp/htdocs/portfolio.html"><i class='fas fa-share-alt-square big'></i></a>
+                        <a href="https://aravindatchan.github.io/aravindatchan-u/"><i class='fas fa-share-alt-square big'></i></a>
                         <a href="https://t.me/Aravindatchan"> <i class='fab fa-telegram big'></i></a>
                         <!-- <a href="">  <i class='fab fa-twitter big'></i></a> -->
                         <!-- <a href=""><i class="fa fa-snapchat-square big"></i></a> -->
@@ -184,7 +184,6 @@
 
                     </form>
 </div>
-
                 </div>
         </div>
     </main>
